--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -21,7 +21,9 @@ jobs:
         run: go mod tidy
 
       - name: Run tests with coverage
-        run: go test ./... -coverprofile=coverage/coverage.out
+        run: |
+          go test ./... -coverprofile=coverage/coverage.out
+          sed -i 's|/home/runner/work/[^/]*/||' coverage/coverage.out
 
       - name: Upload coverage to Coveralls
         uses: coverallsapp/github-action@v2.0.0
