--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -23,11 +23,11 @@ jobs:
       - name: Run tests with coverage
         run: |
           go test ./... -coverprofile=coverage/coverage.out
-          sed -i 's|/home/runner/work/[^/]*/||' coverage/coverage.out
+          sed -i 's|myapp/||g' coverage/coverage.out
 
       - name: Upload coverage to Coveralls
         uses: coverallsapp/github-action@v2.0.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: coverage/coverage.out
-          base-path: ./
+          base-path: ${{ github.workspace }}
