VOICEVOX APIを使ってずんだもんに読み上げてもらう機能を追加 #18

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
+    "editor.renderWhitespace": "all",
     "terminal.integrated.defaultProfile.windows": "Git Bash",
+    "window.title":"${dirty}${activeEditorMedium}${separator}${rootName}"
 }
