--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,14 @@ services:
       - VOICEVOX_CORS_POLICY_MODE=all
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          cpus: "1.5"
+          memory: 2G
+        reservations:
+          cpus: "0.5"
+          memory: 512M
 
   # 子音チェンジャーアプリケーション
   app:
@@ -25,6 +33,14 @@ services:
     networks:
       - app-network
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: 1G
+        reservations:
+          cpus: "0.3"
+          memory: 256M
 
 networks:
   app-network:
